# automated_automation

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
apps/api/: main.py
apps/cad/: main.py
apps/capability/: main.py
apps/chem_planner/: main.py
apps/cli/: main.py
apps/discovery/: main.py
apps/interop/: main.py
apps/orchestrator/: main.py
apps/placement/: main.py
apps/procurement/: main.py
apps/synthesis/: main.py
apps/verification/: main.py
apps/worker/: main.py
docs/: ARCHITECTURE.md  PHASE0.md  driver_contract.md  implementation_plan.md  pre_driver_scope.md  repo_conventions.md  repo_todo_alignment.md  todo.md
docs/adr/: ADR-001-core-infra-baseline.md  ADR-002-mcp-first-app-native-orchestration.md  ADR-003-coding-agent-cli-adapter.md  ADR-004-apc-composition-boundary.md  ADR-005-web-ui-cli-execution-safety.md
docs/architecture/: e0-aa-apc-integration-sequence.md  e0-system-topology.md
docs/epics/: epic-e0-acceptance-checklist.md
infra/: README.md  docker-compose.yml
scripts/: validate_contracts.py
tests/unit/: test_contract_examples.py  test_contract_models.py  test_contract_policy.py  test_health.py  test_pre_driver_pipeline.py  test_request_context.py  test_service_apps.py
